turned to linuxserverio

--- a/roles/nextcloud/templates/env.j2
+++ b/roles/nextcloud/templates/env.j2
@@ -1,3 +1,4 @@
 MYSQL_ROOT_PASSWORD={{ mysql_root_password }}
 MYSQL_PASSWORD={{ mysql_password }}
 MYSQL_USER=nextcloud
+NEXTCLOUD_DATA_DIR=/var/www/html/data
